fixed flexbox so the items wrap better

--- a/src/sass/Product.scss
+++ b/src/sass/Product.scss
@@ -27,7 +27,7 @@
 		object-fit: contain;
 		border-top-left-radius: 5px;
 		border-top-right-radius: 5px;
-		max-width: 333px;
+		max-width: 100%;
 	}
 
 	button {
